fixed icon clipping

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body{
   justify-content: center;
   width: auto;
   overflow: hidden;
-  height:200px;
+  height:300px;
 
 }
 .perk-display{
